Added token controller.
